2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* Swapping.cs:
	* PrintHex.cs:
	* ArrayFill.cs:
	* ArrayIsEmpty.cs:
	* DateHandlers.cs:
	* StringHandlers.cs:
	* BigEndianMarshal.cs:
	* BigEndianBitConverter.cs:
	* AssemblyInfo.cs:
	* EndianAwareBinaryReader.cs: Updated copyright string.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs: Bumped version to 3.3.99.0.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Helpers.csproj: Upped version to 3.3.99.0. Do
	  not use version from solution on library projects.

2016-09-05  Natalia Portillo  <claunia@claunia.com>

	* DateHandlers.cs: Added AppleSingle and AppleDouble filters.

2016-09-02  Natalia Portillo  <claunia@claunia.com>

	* DateHandlers.cs: Adds support for NILFS2 filesystem.

2016-09-02  Natalia Portillo  <claunia@claunia.com>

	* DateHandlers.cs: Add supports for UNIX timestamps divided in
	seconds+nanoseconds.

2016-08-26  Natalia Portillo  <claunia@claunia.com>

	* DateHandlers.cs: Added CP/M timestamp converter.

2016-08-22  Natalia Portillo  <claunia@claunia.com>

	* BigEndianMarshal.cs:
	* BigEndianStructure.cs:
	* DiscImageChef.Helpers.csproj: Reworked big endian marshal.
	Does not traverse nested structures.

2016-08-21  Natalia Portillo  <claunia@claunia.com>

	* BigEndianStructure.cs:
	* DiscImageChef.Helpers.csproj: Added code that directly
	marshals from a big-endian byte array. But untested with
	nested structures.

2016-08-09  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Helpers.csproj: Bumped version to 3.2.99.2.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Helpers.csproj: Public beta release 3.2.99.1.

2016-08-07  Natalia Portillo  <claunia@claunia.com>

	* DateHandlers.cs: Added DOS to C# date converter.

2016-08-01  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs:
	* DiscImageChef.Helpers.csproj: Bumped to version 3.2.1.

2016-08-01  Natalia Portillo  <claunia@claunia.com>
